[package]
name = "nats_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
time = "0.3.36"
async-nats = "0.37.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.91"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.22"
log = "0.4.22"
uuid = "1.11"
rand = "0.8.5"
async-trait = "0.1.83"
prost = "0.11"
